--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ h2 {
     padding: 5px 0 0;
 }
 
+.block p {
+    font-size: 20px;
+}
+
 .list {
     text-align: left;
 }
@@ -45,5 +49,9 @@ h2 {
 
     .content {
         padding: 30px 50px 10px;
+    }
+
+    .block p {
+        font-size: 16px;
     }
 }
