--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ h2 {
     font-size: 20px;
 }
 
+.list ul {
+    padding-left: 20px;
+}
+
 .list ul li {
     list-style-type: none;
     margin-bottom: 5px;
